objects/Survey_Results__c.object
<CustomObject>
    <description>Object used to house survey results of the questions and answers for digigraph surveys</description>
    <fields>
        <fullName>Animal_Count_Update__c</fullName>
        <formula>Question_Answer_ID__r.Animal_Count_Update__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Animal Count Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Animal_Type_Decode__c</fullName>
        <description>Inserts and Animal Type when one is not identified.  Example:  If he Animal = General in Digigraph, decode to the proper animal type.</description>
        <formula>If(
 Question_Answer_ID__r.Name  =&quot;Q-0013&quot;,&quot;Horse&quot;,
If(
 Question_Answer_ID__r.Name  =&quot;Q-0060&quot;,&quot;Horse&quot;,
If(
 Question_Answer_ID__r.Name =&quot;Q-0014&quot;,&quot;Cattle&quot;,
if(
 Question_Answer_ID__r.Name  =&quot;Q-0015&quot;,&quot;Dairy&quot;,
if(
 Question_Answer_ID__r.Name  =&quot;Q-0016&quot;,&quot;Swine&quot;,
Text(Question_Answer_ID__r.Animal_Type__c ))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Animal Type (Decode)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Type_Indicator__c</fullName>
        <description>Indicator which identifies which questions from the Survey Results table should be inserted into the Survey Results Summary Table.</description>
        <formula>if( 
Question_Answer_ID__r.Name =&quot;Q-0040&quot;,&quot;Yes&quot;, 
if( 
Question_Answer_ID__r.Name =&quot;Q-0041&quot;,&quot;Yes&quot;, 
if( 
Question_Answer_ID__r.Name =&quot;Q-0042&quot;,&quot;Yes&quot;,  
If( 
Question_Answer_ID__r.Name =&quot;Q-0078&quot;,&quot;Yes&quot;, 
if( 
Question_Answer_ID__r.Name =&quot;Q-0015&quot;,&quot;Yes&quot;, 
if( 
Question_Answer_ID__r.Name =&quot;Q-0016&quot;,&quot;Yes&quot;, 
if( 
Question_Answer_ID__r.Name =&quot;Q-0059&quot;,&quot;Yes&quot;, 
if( 
Question_Answer_ID__r.Name =&quot;Q-0060&quot;,&quot;Yes&quot;, 
if( 
Question_Answer_ID__r.Name =&quot;Q-0070&quot;,&quot;Yes&quot;, 
if( 
Question_Answer_ID__r.Name =&quot;Q-0077&quot;,&quot;Yes&quot;,
&quot;No&quot; ))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Animal Type Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Type__c</fullName>
        <description>Animal Type of the Question related to the Survey Result</description>
        <formula>TEXT( Question_Answer_ID__r.Animal_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Animal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Answer record that survey respondent chose to answer the related Question</description>
        <label>Answer Lookup</label>
        <referenceTo>Answer__c</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Answer_Option_Formula__c</fullName>
        <description>Pull in the Answer Option text from the related Answer record</description>
        <formula>Answer_Lookup__r.Answer_Option__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer Option Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <description>Answer from contact/lead related to Question asked from survey</description>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cattle_Question_Indicator__c</fullName>
        <description>Used in Process Builder</description>
        <formula>if( 
Question_Answer_ID__r.Name =&quot;Q-0051&quot;,&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cattle Question Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact that answered the Survey questions and provided answers</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_is_Null_Indicator__c</fullName>
        <formula>If(IsBlank(Contact__c),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact is Null Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Event_Name_Text__c</fullName>
        <formula>Customer_Event__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Event Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Event_Sub_Type__c</fullName>
        <formula>text(Customer_Event__r.Sub_type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Event Sub-Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Event where Question and Answer were received</description>
        <label>Customer Event</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Digigraph_Unique_ID__c</fullName>
        <formula>TEXT(Order_Sequence__c) &amp;Question_Answer_ID__c &amp; TEXT(LastModifiedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digigraph Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type__c</fullName>
        <formula>Lead__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead that provided answers to the Questions from the survey</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Sequence__c</fullName>
        <description>Order Sequence of Survey Result (based on order sequence of Question &amp; Answer record)</description>
        <formula>Question_Answer_ID__r.Order_Sequence__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Answer_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of Question &amp; Answer Record</description>
        <label>Question ID</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question asked on Survey</description>
        <formula>Question_Answer_ID__r.Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmentation__c</fullName>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                    <default>true</default>
                    <label>Direct</label>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Digit_Customer_Event_ID__c</fullName>
        <formula>Customer_Event__r.X18_Digit_Customer_Event_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Customer Event ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Lead_ID__c</fullName>
        <formula>Lead__r.X18_Digit_Lead_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Survey_Results_ID__c</fullName>
        <description>Case Safe Record ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Survey Results ID</label>
        <type>Text</type>
    </fields>
    <label>Survey Results</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order_Sequence__c</columns>
        <columns>Animal_Type__c</columns>
        <columns>Question__c</columns>
        <columns>Answer__c</columns>
        <columns>Contact__c</columns>
        <columns>Lead__c</columns>
        <columns>Customer_Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Survey Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Results</pluralLabel>
    <recordTypes>
        <fullName>Digigraph_Survey_Results</fullName>
        <active>true</active>
        <description>Results related to Digigraph Surveys</description>
        <label>Digigraph Survey Results</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>